Apply some css universal behaviours

--- a/index.html
+++ b/index.html
@@ -9,10 +9,17 @@
 
     <!--CSS-->
     <link rel="stylesheet" href="./css/style.css">
+
+    <link rel="icon" type="image/png" href="./img/favicon.png">
     
     <title>XTours | Advanturous Tours for Explorers</title>
 </head>
 <body>
+    <!--Header Starts Here-->
+    <header class="header">
+
+    </header>
+    <!--Header Ends Here-->
     
 </body>
 </html>
