--- a/index.html
+++ b/index.html
@@ -12,12 +12,21 @@
 
     <link rel="icon" type="image/png" href="./img/favicon.png">
     
-    <title>XTours | Advanturous Tours for Explorers</title>
+    <title>XTour | Home</title>
 </head>
 <body>
     <!--Header Starts Here-->
     <header class="header">
+        <div class="logo-box">
+            <img src="./img/logo-white.png" alt="Logo" class="logo">
+        </div>
 
+        <div class="text-box">
+            <h1 class="heading-primary">
+                <span class="heading-primary-main">XTour</span>
+                <span class="heading-primary-sub">Travel and Enjoy a Worry-Free Vacation</span>
+            </h1>
+        </div>
     </header>
     <!--Header Ends Here-->
     
