Finish animation for the button in header

--- a/index.html
+++ b/index.html
@@ -26,6 +26,8 @@
                 <span class="heading-primary-main">XTour</span>
                 <span class="heading-primary-sub">Travel and Enjoy a Worry-Free Vacation</span>
             </h1>
+
+            <a href="#" class="btn btn-white btn-animated">Start Your Journey</a>
         </div>
     </header>
     <!--Header Ends Here-->
